syntax = "proto3";
option java_multiple_files = true;
package customer;

message CreateCustomerRequest {
  string first_name = 1;
  string last_name = 2;
  string phone_number = 3;
  string email = 4;
  string password = 5;
}

message UpdateEmailRequest{
   int32 accountId = 1;
   string email =2;
}

message UpdatePasswordRequest{
  int32 accountId = 1;
  string password =2;
}

message UpdatePhoneNumberRequest{
  int32 accountId = 1;
  string phoneNumber = 2;
}

message EmptyResponse {

}

service CustomerService {
  rpc CreateCustomer(CreateCustomerRequest) returns (EmptyResponse);
  rpc UpdateEmail(UpdateEmailRequest) returns (EmptyResponse);
  rpc UpdatePassword(UpdatePasswordRequest) returns (EmptyResponse);
  rpc UpdatePhoneNumber(UpdatePhoneNumberRequest) returns (EmptyResponse);
}


