syntax = "proto3";
option java_multiple_files = true;
package foodOffer;

message CreateFoodOfferRequest
{
  int32 foodSellerId = 1;
  string title = 2;
  string description = 3;
  double price = 4;
  string startPickUpTime = 5;
  string endPickUpTime = 6;
}

message ReadAvailableFoodOffersRequest {}

message ReadFoodOffersByFoodSellerIdRequest
{
  int32 foodSellerId = 1;
}
message ReadFoodOfferByIdRequest{
  int32 id =1;
}

message UpdateFoodOfferRequest
{
  int32 foodOfferId = 1;
  string title = 2;
  string description = 3;
  double price = 4;
  string startPickUpTime = 5;
  string endPickUpTime = 6;
}

message DeleteFoodOfferRequest
{
  int32 foodOfferId = 1;
}
message FoodOfferEmptyResponse {}
message ReadFoodOffersListResponse
{
  string list = 1;
}

message ReadFoodOfferByIdResponse{
  int32 id = 1;
  int32 foodSellerId =2 ;
  string title=3;
  string description=4;
  double price=5;
  string startPickUpTime=6;
  string endPickUpTime=7;
  string foodSellerName=8;
  string foodSellerAddress=9;
  bool isReserved=10;
  bool isCompleted=11;
}

service FoodOfferService {
  rpc createFoodOffer(CreateFoodOfferRequest) returns (FoodOfferEmptyResponse);
  rpc readAvailableFoodOffers(ReadAvailableFoodOffersRequest) returns (ReadFoodOffersListResponse);
  rpc readFoodOffersByFoodSellerId(ReadFoodOffersByFoodSellerIdRequest) returns (ReadFoodOffersListResponse);
  rpc updateFoodOffer(UpdateFoodOfferRequest) returns (FoodOfferEmptyResponse);
  rpc deleteFoodOffer(DeleteFoodOfferRequest) returns (FoodOfferEmptyResponse);
  rpc readFoodOfferById(ReadFoodOfferByIdRequest) returns (ReadFoodOfferByIdResponse);
}